created interior pages and added fade in effect for most pages

--- a/partials/main.html
+++ b/partials/main.html
@@ -1,73 +1,149 @@
-<!--Main Categories-->
-        <section id="ang-blocks">
-            <div id="main"><a href="#"><h2>Web Apps</h2><img src="" /></a></div>
-            <div id="pic2"><a href="#"><h2>Graphics</h2><img src="" /></a></div>
-            <div id="pic3"><a href="#"><h2>Photos</h2><img src="" /></a></div>
-        </section>
-        <!--Web Apps: App Desc + Case Studies-->
-        <section id="blob-list">
-            <div>
-                <img src="#" />
-                <h2>Odysey</h2>
-                <p>
-                    <span>Case study:</span>
-                    This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
-                </p>
-                <a href="/odysey/index.html">View Site</a>
-            </div>
-            <div>
-                <img src="#" />
-                <h2>Gringotts</h2>
-                <p>
-                    <span>Case study:</span>
-                    This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
-                </p>
-                <a href="/gringotts/index.html">View Site</a>
-            </div>
-            <div>
-                <img src="#" />
-                <h2>Project Title #1</h2>
-                <p>
-                    <span>Case study:</span>
-                    This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
-                </p>
-                <a href="#">View Site</a>
-            </div>
-        </section>
-        <section id="pagan-blocks">
-            <!--Skills-->
-            <div class="text-block">
-                <h2>Skills:</h2>
-                <div class="overlay"></div>
-                <div class="content">
-                    <p>Skills: HTML, CSS(LESS + SASS), Javascript/jQuery<br /><br />
-                    Learning: Angular.js, Node.js
-                    </p>
-                </div>
-            </div>
-            <!--Past-->
-            <div class="text-block">
-                <h2>Old Resume:</h2>
-                <div class="overlay"></div>
-                <div class="content">
-                    <p>
-                        Vision Internet: Nov 14'-Present<br />
-                        Front End Developer<br />
-                    </p>
-                    <p>
-                        UCLA FAST: Sept 13'-Jun 14'<br />
-                        PR/Social Media Director
-                    </p>
-                    <p>
-                       School: UCLA 14'<br />
-                       Major: Business Economics<br />
-                    </p>
-                </div>
-            </div>
-            <div class="half-block">
-                <h2>Hello</h2>
-            </div>
-            <div class="half-block">
-               <h2>Greetings</h2>
-            </div>
-        </section>
+<div id="fullpage">
+	<section class="section" data-anchor="first" id="1">
+	   <h1>DDCHIANG</h1>
+		<p>Welcome to my portfolio</p>
+	</section>
+	<section class="section" data-anchor="sec" id="2">
+		<h1>POLAR CHART UI</h1>
+		<div class="summ">
+			<p>This one was uber fun. I messed around with bar charts 
+			and line charts first before settling on building a simple 
+			Polar Chart UI using the base chart + legend initiation 
+			and "grab data" methods provided by the
+			Chart.js API. </p>
+
+			<p>What I added: Random hex color generator, a way for 
+			users to dynamically delete or update data slices, and
+			a simple UI for users to build Polar Charts off their 
+			own data. </p>
+		</div>
+		<div class="figure">
+			<div class="image_slider">
+				<ul class="slides">
+					<li >
+						<img src="charts2.jpg" />
+					</li>
+					<li >
+						<img src="charts1.jpg" />
+					</li>
+				</ul>
+			</div>
+		<div class="extra">
+			<p>Stack: Chart.js, jQuery, Javascript, HTML/LESS/CSS</p>
+
+			<p class="tags">Tags: Dynamic Chart Rendering, JSON, Data, UI</p>
+		</div>
+		</div>
+		<a class="go" href="/charts">
+			Visit Site
+		</a>
+	</section>
+	<section class="section" data-anchor="third" id="3">
+		<h1>GROCERY</h1>
+		<div class="summ">
+			<p>A basic grocery calculator web app running off of 
+			Angular and a bit of jQuery/js. It calculate and records 
+			items, quantity and price as you add them into your 
+			cart.</p>
+			<p>
+				Its basic functionality is very similar to a "to do" list.
+			</p>
+			
+		</div>
+		<div class="figure">
+			<div class="image_slider">
+				<ul class="slides">
+					<li >
+						<img src="grocery1.jpg" />
+					</li>
+					<li >
+						<img src="grocery2.jpg" />
+					</li>
+				</ul>
+			</div>
+			<div class="extra">
+			   <p>Stack: Angular.js, jQuery, Javascript, HTML/LESS/CSS</p>
+
+				<p class="tags">Tags: Angular, JSON/Data, Math, Asynchronous, Dynamic Rendering, UI</p>
+			</div>
+		</div>
+		<a class="go" href="/grocery">
+			Visit Site
+		</a>
+	</section>
+	<section class="section" data-anchor="four" id="4">
+	   <h1>GRINGOTTS</h1>
+		<div class="summ">
+			<p>Gringotts is a fictional bank responsive design originally written on php.
+				Since then, the site has been rewritten in Angular to handle form validation, routing and templating.
+			</p>
+		</div>
+		<div class="figure">
+			<div class="image_slider">
+				<ul class="slides">
+					<li >
+						<img src="gringott1.jpg" />
+					</li>
+					<li >
+						<img src="gringott2.jpg" />
+					</li>
+				</ul>
+			</div>
+			<div class="extra">
+			   <p>Stack: Angular.js, jQuery, Javascript, HTML/LESS/CSS</p>
+
+				<p class="tags">Tags: Angular Routing/Templating, Form Validation, Creative</p>
+			</div>
+		</div>
+		<a class="go" href="/gringotts">
+			Visit Site
+		</a>
+	</section>
+	<section class="section" data-anchor="five" id="5">
+	   <h1>ODYSEY</h1>
+		<div class="summ">
+			<p>Random Test   </p>
+		</div>
+		<div class="figure">
+			<div class="image_slider">
+				<ul class="slides">
+					<li >
+						<img src="images/_.jpg" />
+					</li>
+					<li >
+						<img src="images/_.jpg" />
+					</li>
+				</ul>
+			</div>
+			<div class="extra">
+			   <p>Stack: jQuery, Javascript, HTML/LESS/CSS</p>
+
+				<p class="tags">Tags: Parallax, Form Validation, Creative</p>
+			</div>
+		</div>
+		<a class="go" href="/odyssey">
+			Visit Site
+		</a>
+	</section>
+	<div id="fp-nav-fake">
+		<ul>
+			<li>
+				<a href="#1"></a>
+			</li>
+			<li>
+				<a href="#2"></a>
+			</li>
+			<li>
+				<a href="#3"></a>
+			</li>
+			<li>
+				<a href="#4"></a>
+			</li>
+			<li>
+				<a href="#5"></a>
+			</li>
+		</ul>
+	</div>
+</div>
+<script src="jquery.fullPage.min.js"></script>
+<script src="jquery.flexslider-min.js"></script>
