--- a/sites/grocery/style/styles.less
+++ b/sites/grocery/style/styles.less
@@ -50,6 +50,7 @@ body
     background: url(../images/veggie1.jpg) top center no-repeat;
       background-size: 1242px;
         width: 100%;
+		display: none;
 }
 
 h1
