--- a/stylesheet/stylesheet.less
+++ b/stylesheet/stylesheet.less
@@ -37,6 +37,11 @@ body {
     }
 }
 
+body.short
+{
+	  height: 100vh!important;
+}
+
 //mobile
 header
 {
@@ -227,7 +232,8 @@ header
 .float
 {
 	background: rgba(255,255,255,.1);
-
+	  text-align: center;
+  font-size: 20px;
 	p
 	{
 		color: #fff;	
