--- a/partials/resume.html
+++ b/partials/resume.html
@@ -40,7 +40,7 @@
 		</p>
           <p>
 			<span class="title">Skills</span>
-            Web Development: Javascript, jQuery, HTML/LESS/SASS(css), Angular.js, Chart.js<br /><br />
+            Web Development: Javascript, jQuery, HTML5/LESS/CSS3, Angular.js, Chart.js, AJAX/JSON<br /><br />
            Learning: Node.js, Express.js<br /><br />
            Github: <a href="https://github.com/DDChiang/">github.com/DDChiang</a><br /><br />
 		</p>
@@ -54,9 +54,9 @@
 		</p>
 		<p>
 			<span class="title">Projects</span>
-            <a href="/charts">Polar Chart UI</a> - Polar Area Chart User Interface based off of chart.js api<br />
+            <a href="/charts">Polar Chart UI</a> - Polar Area Chart User Interface based off of Chart.js API<br />
             <a href="/grocery">Grocery</a> - Daily grocery calculator built with Angular<br />
-            <a href="/gringott">Gringott Bank</a> - Minimalist bank design with form validation<br />
+            <a href="/gringott">Gringott Bank</a> - Minimalist bank design with Angular form validation and routing<br />
            
 		</p>
 		<p>
