created City by Flickr d3js web app

--- a/partials/skills.html
+++ b/partials/skills.html
@@ -33,11 +33,13 @@
 	<div class="page">
 		<p>
 			<span class="title">Skills</span>
-            Web Development: Javascript, jQuery, HTML/LESS/SASS(css), Angular.js, Chart.js<br /><br />
-           Learning: Node.js, Express.js<br /><br />
+            Web Development: JavaScript, jQuery, HTML/LESS/SASS(css), Angular.js, Chart.js<br /><br />
+            Learning: D3.js, Node.js<br /><br />
+		    API's: Facebook, Twitter, Flickr <br><br>
             Design: Photoshop, Illustrator, Paint :D<br /><br />
             Strengths/Interests: Dynamic Data Rendering + Beautiful and Efficient UI's<br /><br />
-           Github/<a href="https://github.com/DDChiang/">DDChiang</a><br /><br />
+           <em>Github/</em><a href="https://github.com/DDChiang/">DDChiang</a><br /><br />
+		   <a href="https://github.com/DDChiang/test-node/tree/master/sites/city-by-flickr">Github - City By Flickr</a><br /><br />
             <a href="https://github.com/DDChiang/test-node/tree/master/sites/charts">Github - Polar Chart UI</a><br /><br />
            <a href="https://github.com/DDChiang/test-node/tree/master/sites/grocery"> Github - Grocery App</a><br /><br />
             <a href="https://github.com/DDChiang/test-node/tree/master/sites/gringotts">Github - Gringotts</a><br /><br />
