--- a/partials/resume.html
+++ b/partials/resume.html
@@ -40,20 +40,22 @@
 		</p>
           <p>
 			<span class="title">Skills</span>
-            Web Development: Javascript, jQuery, HTML5/LESS/CSS3, Angular.js, Chart.js, AJAX/JSON<br /><br />
-           Learning: Node.js, Express.js<br /><br />
-           Github: <a href="https://github.com/DDChiang/">github.com/DDChiang</a><br /><br />
+            Web Development: JavaScript, jQuery, HTML/LESS/SASS(css), Angular.js, Chart.js<br /><br />
+            Learning: D3.js, Node.js<br /><br />
+			API's: Facebook, Twitter, Flickr <br><br>
+            Github: <a href="http://github.com/DDChiang/">github.com/DDChiang</a><br /><br />
 		</p>
 		<p>
             <span class="title">Most Recent Experience</span>
 			    Front End Web Developer @ Vision Internet
                 <span class="date">11/14-Present</span><br /><br />
                 - Translated designs and style guides provided by UX/Project teams into functional cross-browser sites<br /><br />
-                - Created and customized jQuery plugin solutions for client projects <br /><br />
-                - Stack: jQuery, js, HTML/LESS/CSS<br><br>
+                - Created and customized Angular and jQuery plugin solutions for client projects <br /><br />
+                - Stack: jQuery, JavaScript, Angular, HTML/LESS/CSS<br><br>
 		</p>
 		<p>
 			<span class="title">Projects</span>
+			<a href="/city-by-flickr">City By Flickr</a> - "Popular Cities" Flickr Stat Chart built with D3.js<br />
             <a href="/charts">Polar Chart UI</a> - Polar Area Chart User Interface based off of Chart.js API<br />
             <a href="/grocery">Grocery</a> - Daily grocery calculator built with Angular<br />
             <a href="/gringott">Gringott Bank</a> - Minimalist bank design with Angular form validation and routing<br />
